LPS-99474 sharing-web - Fix user name being truncated when it shouldn't be

--- a/modules/apps/sharing/sharing-web/src/main/resources/META-INF/resources/ManageCollaborators.scss
+++ b/modules/apps/sharing/sharing-web/src/main/resources/META-INF/resources/ManageCollaborators.scss
@@ -16,7 +16,12 @@
 	.list-group-item {
 		border: 0;
 		font-size: 1rem;
+		overflow: auto;
 		padding: 0.5rem 1.25rem;
+
+		.autofit-col-expand {
+			flex-shrink: 0;
+		}
 	}
 
 	// LPS-99475
